--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,15 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    compile "com.android.support:appcompat-v7:$support_lib_version"
+    compile "com.android.support:recyclerview-v7:$support_lib_version"
 }
 buildscript {
     ext.kotlin_version = '1.0.1-2'
+
+    ext.support_lib_version = '23.3.0'
     repositories {
         mavenCentral()
     }
