--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 23
@@ -30,16 +31,20 @@ dependencies {
 
     compile "com.android.support:appcompat-v7:$support_lib_version"
     compile "com.android.support:recyclerview-v7:$support_lib_version"
+    compile "com.android.support:cardview-v7:$support_lib_version"
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 buildscript {
     ext.kotlin_version = '1.0.1-2'
 
-    ext.support_lib_version = '23.3.0'
+    ext.support_lib_version = '23.4.0'
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
     }
 }
 repositories {
