--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$support_lib_version"
     compile "com.android.support:cardview-v7:$support_lib_version"
 
+    compile "com.android.support:design:$support_lib_version"
+
     compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 buildscript {
