--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
 
         <activity android:name=".list.ImageList" />
+        <activity android:name=".create.CreateNewImage" />
     </application>
 
 </manifest>
