--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.afollestad.material-dialogs:core:0.8.5.9'
     compile 'com.android.support:support-v4:23.4.0'
+
+    compile 'io.realm:android-adapters:1.2.2'
 }
 buildscript {
     ext.kotlin_version = '1.0.1-2'
