--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.sthagios.stopmotion.fileprovider"
@@ -46,6 +45,7 @@
             android:name=".show.ShowGifActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
+        <activity android:name=".create.GenerateGifActivity"></activity>
     </application>
 
 </manifest>
