--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,10 @@
             android:name=".show.ShowGifActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
-        <activity android:name=".create.GenerateGifActivity"></activity>
+        <activity
+            android:name=".create.GenerateGifActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
