--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,11 @@
             android:name=".create.GenerateGifActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".settings.SettingsActivity"
+            android:configChanges="orientation"
+            android:parentActivityName=".list.ImageListActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
