--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,8 @@ def buildTime = {
     return df.format(new Date())
 }()
 
+def version_name = "1.0"
+def version_code = 1
 
 android {
     compileSdkVersion 23
@@ -23,14 +25,26 @@ android {
         applicationId "com.sthagios.stopmotion"
         minSdkVersion 21
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode version_code
+        versionName version_name
 
 
         buildConfigField "String", "GIT_SHA", "\"$gitSha\""
         buildConfigField "String", "BUILD_TIME", "\"$buildTime\""
     }
+
+    productFlavors {
+        dev {
+            versionName "$version_name-Debug"
+        }
+
+        play {
+
+        }
+    }
+
     buildTypes {
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
