--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:supportsRtl="true">
 
         <service android:name=".notifications.NotificationService">
             <intent-filter>
@@ -31,6 +31,7 @@
         </provider>
 
         <activity
+            android:theme="@style/AppTheme.Launcher"
             android:name=".MainActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
