--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,11 @@
             android:parentActivityName=".list.ImageListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
+
+        <activity
+            android:name=".rating.RatingActivity"
+            android:configChanges="orientation"
+            android:theme="@style/AppTheme.Transparent" />
     </application>
 
 </manifest>
