--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
             android:name=".create.CreateNewImage"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
+            android:taskAffinity="com.sthagios.stopmotion.create"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".show.ShowGifActivity"
@@ -62,6 +63,7 @@
             android:name=".create.GenerateGifActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
+            android:taskAffinity="com.sthagios.stopmotion.create"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".settings.SettingsActivity"
@@ -73,7 +75,12 @@
             android:name=".rating.RatingActivity"
             android:configChanges="orientation"
             android:theme="@style/AppTheme.Transparent" />
-        <activity android:name=".create.edit.EditImagesActivity"></activity>
+
+        <activity
+            android:name=".create.edit.EditImagesActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:taskAffinity="com.sthagios.stopmotion.create" />
     </application>
 
 </manifest>
