--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ android {
 
         buildConfigField "String", "GIT_SHA", "\"$gitSha\""
         buildConfigField "String", "BUILD_TIME", "\"$buildTime\""
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     productFlavors {
@@ -79,12 +81,23 @@ dependencies {
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.afollestad.material-dialogs:core:0.8.5.9'
-    compile 'com.android.support:support-v4:23.4.0'
+    compile "com.android.support:support-v4:$support_lib_version"
 
     compile 'io.realm:android-adapters:1.2.2'
 
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    androidTestCompile "com.android.support:support-annotations:$support_lib_version"
+    androidTestCompile 'tools.fastlane:screengrab:0.3.2'
+
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.0') {
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude module: 'recyclerview-v7'
+    }
 
 }
+
+
 buildscript {
     ext.kotlin_version = '1.0.1-2'
 
