--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,12 +48,22 @@ android {
     buildTypes {
 
         release {
-            minifyEnabled false
+            shrinkResources true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+    }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'mips', 'x86', 'x86_64'
+            universalApk false
+        }
     }
 }
 
@@ -81,7 +91,7 @@ dependencies {
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.afollestad.material-dialogs:core:0.8.5.9'
-    compile "com.android.support:support-v4:$support_lib_version"
+//    compile "com.android.support:support-v4:$support_lib_version"
 
     compile 'io.realm:android-adapters:1.2.2'
 
