--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,14 +63,14 @@ android {
         abi {
             enable true
             reset()
-            include 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'mips', 'x86', 'x86_64'
+            include 'armeabi-v7a', 'mips', 'x86', 'x86_64'
             universalApk false
         }
     }
 }
 
 // map for the version code
-ext.versionCodes = ['armeabi-v7a': 1, mips: 2, x86: 3, armeabi: 4, 'arm64-v8a': 5, 'x86_64': 6]
+ext.versionCodes = ['armeabi-v7a': 1, mips: 2, x86: 3, 'x86_64': 4]
 
 android.applicationVariants.all { variant ->
     // assign different version code for each output
