--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.sthagios.stopmotion.fileprovider"
+            android:authorities="@string/fileprovider_authority"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
