--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name=".create.CreateNewImage"
+            android:name=".create.CreateNewImageActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:taskAffinity="com.sthagios.stopmotion.create"
