--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,15 +19,15 @@ def version_code = 5
 def appId = "com.sthagios.stopmotion"
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
 
 
     defaultConfig {
         applicationId appId
         minSdkVersion 21
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode version_code
         versionName version_name
 
@@ -134,10 +134,10 @@ dependencies {
 
 
 buildscript {
-    ext.kotlin_version = '1.0.4'
+    ext.kotlin_version = '1.0.5-2'
 
-    ext.support_lib_version = '25.0.1'
-    ext.firebase_version = '9.0.2'
+    ext.support_lib_version = '25.1.0'
+    ext.firebase_version = '10.0.1'
     repositories {
         mavenCentral()
     }
