--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,7 +135,7 @@ dependencies {
 
 
 buildscript {
-    ext.kotlin_version = '1.0.5-3'
+    ext.kotlin_version = '1.0.6'
 
     ext.support_lib_version = '25.1.0'
     ext.firebase_version = '10.0.1'
