--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.0.6'
+    ext.kotlin_version = '1.1.0'
     repositories {
         jcenter()
     }
@@ -10,6 +10,7 @@ buildscript {
         classpath 'com.google.gms:google-services:3.0.0'
         classpath "io.realm:realm-gradle-plugin:1.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
         classpath 'com.google.firebase:firebase-plugins:1.0.4'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -22,6 +23,13 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
     }
+}
+
+ext  {
+
+    support_lib_version = '25.2.0'
+    firebase_version = '10.2.0'
+
 }
 
 task clean(type: Delete) {
